--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://root:123456@localhost:5432/chat-app-dev?schema=public"
+
+OPENAI_API_KEY="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"
