--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.7.1",
+    "@types/cors": "^2.8.17",
     "argon2": "^0.31.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
     "https-proxy-agent": "^7.0.2",
     "openai": "^4.24.7",
     "passport": "^0.7.0",
