--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport-local": "^1.0.0",
     "prisma": "^5.7.1",
     "reflect-metadata": "^0.1.13",
+    "replicate": "^0.25.2",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
