--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/throttler": "^5.1.1",
     "@prisma/client": "^5.7.1",
     "@types/cors": "^2.8.17",
+    "alipay-sdk": "^3.6.1",
     "argon2": "^0.31.2",
     "axios": "^1.6.5",
     "class-transformer": "^0.5.1",
